chore(gradle): lombok 추가
롬복 추가

holiday

--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-//	implementation 'org.springframework.boot:spring-boot-starter-validation'
-//	compileOnly 'org.projectlombok:lombok'
-//	annotationProcessor 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
 	implementation 'org.apache.kafka:kafka-clients:3.7.0'
