chore(gradle): kafka 라이브러리 변경
스프링 전용 라이브러리로 변경

holiday

--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.kafka:spring-kafka'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-
-	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
-	implementation 'org.apache.kafka:kafka-clients:3.7.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
